--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "homepage": "https://civic-coup.github.io/civic-coup-ui",
   "dependencies": {
+    "@testing-library/dom": "^7.16.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "typescript": "^3.9.5"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
