--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-load-script": "^0.0.6",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.1",
     "typescript": "^3.9.5"
   },
   "devDependencies": {
