--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
+        "classnames": "^2.2.6",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-load-script": "^0.0.6",
@@ -60,7 +61,7 @@
     },
     "lint-staged": {
         "src/**/*.{js,jsx}": [
-            "eslint"
+            "eslint --fix"
         ]
     }
 }
